<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>de.metaserve</groupId>
	<artifactId>dpql</artifactId>
	<name>dpql</name>
	<version>1.2-SNAPSHOT</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<metanome.version>1.2-SNAPSHOT</metanome.version>
        <lombok.version>1.18.30</lombok.version>
		<fastutil.version>8.2.2</fastutil.version>
		<opencsv.version>5.12.0</opencsv.version>
		<antlr.version>4.13.2</antlr.version>
		<junit.version>5.11.0-M2</junit.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<dependencies>
		<dependency>
			<groupId>de.vandermeer</groupId>
			<artifactId>asciitable</artifactId>
			<version>0.3.2</version>
		</dependency>

		<dependency>
			<groupId>de.uni-potsdam.hpi</groupId>
			<artifactId>dao</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>de.metanome.algorithms.hyfd</groupId>
			<artifactId>HyFD</artifactId>
			<version>${metanome.version}</version>
		</dependency>

		<dependency>
			<groupId>de.metanome.algorithms.dva</groupId>
			<artifactId>DVA</artifactId>
			<version>${metanome.version}</version>
		</dependency>

		<dependency>
			<groupId>de.metanome.algorithms.hyucc</groupId>
			<artifactId>HyUCC</artifactId>
			<version>${metanome.version}</version>
		</dependency>

		<dependency>
			<groupId>de.metanome.algorithms.binder</groupId>
			<artifactId>BINDER</artifactId>
			<version>${metanome.version}</version>
		</dependency>

		<dependency>
			<groupId>de.metanome</groupId>
			<artifactId>algorithm_integration</artifactId>
			<version>${metanome.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>de.metanome</groupId>
			<artifactId>algorithm_helper</artifactId>
			<version>${metanome.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>de.metanome</groupId>
			<artifactId>backend</artifactId>
			<version>${metanome.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4</artifactId>
			<version>${antlr.version}</version>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>${antlr.version}</version>
		</dependency>

		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>it.unimi.dsi</groupId>
			<artifactId>fastutil</artifactId>
			<version>${fastutil.version}</version>
		</dependency>

		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>${opencsv.version}</version>
		</dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

	</dependencies>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>

			<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>${antlr.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>antlr4</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<fork>true</fork>
					<useModulePath>false</useModulePath>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<compilerArgument>-Xlint:all</compilerArgument>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>de.metaserve.Main</mainClass>
								</transformer>
								<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
									<resource>reference.conf</resource>
								</transformer>
							</transformers>

							<createDependencyReducedPom>false</createDependencyReducedPom>

							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>module-info.class</exclude>
										<exclude>LICENSE*</exclude>
										<exclude>META-INF/LICENSE*</exclude>
										<exclude>META-INF/MANIFEST*</exclude>
										<exclude>META-INF/NOTICE*</exclude>
										<exclude>META-INF/services/com.fasterxml.jackson.core.JsonFactory</exclude>
										<exclude>META-INF/services/com.fasterxml.jackson.databind.Module</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>